# ModAutoUpdates

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: api_calls.rs  config.rs  default.json  main.rs
