[package]
name = "ModAutoUpdates"
version = "0.1.1"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
reqwest = { version = "0.12.14", features = ["stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
zip = "4.2.0"
toml = "0.9.2"
