[package]
name = "ModAutoUpdates"
version = "0.0.1"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
reqwest = { version = "0.12.23", features = ["stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
zip = "4.5.0"
toml = "0.9.5"
chrono = "0.4.42"

[env]
Config-version = "V1"
